changed top pic and fix alignment for elements in top-content'/

--- a/less/index.less
+++ b/less/index.less
@@ -89,10 +89,10 @@ html, body {
 	padding: 20px;
 	
 	.top-image{
-		width: 50%;
+		width: 100%;
 
 		img{
-			width: 45%;
+			width: 100%;
 		}
 	}
 
@@ -102,7 +102,7 @@ html, body {
 		align-content: space-around;
 
 		h1{
-			font-size: 6rem;
+			font-size: 4rem;
 		}
 
 		h3{
@@ -114,12 +114,14 @@ html, body {
 		}
 
 		button{
+			align-self: flex-start;
 			text-align: center;
 			padding: 20px;
 			background-color: plum;
 			color: white;
 			font-size: 1.8rem;
 			border-radius: 10px;
+			width: 25%;
 		}
 	}
 }
